--- a/proj.win32/elements.vcxproj.filters
+++ b/proj.win32/elements.vcxproj.filters
@@ -57,9 +57,6 @@
     <ClCompile Include="..\Classes\LevelMapScene.cpp">
       <Filter>src\Scenes</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\loadscene.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\MenuBuilder.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -68,6 +65,9 @@
     </ClCompile>
     <ClCompile Include="..\Classes\BarracksUI.cpp">
       <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\loadscene.cpp">
+      <Filter>src\Scenes</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -104,9 +104,6 @@
     <ClInclude Include="..\Classes\LevelMapScene.h">
       <Filter>src\Scenes</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\loadscene.h">
-      <Filter>src</Filter>
-    </ClInclude>
     <ClInclude Include="..\Classes\MenuBuilder.h">
       <Filter>src</Filter>
     </ClInclude>
@@ -115,6 +112,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\BarracksUI.h">
       <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\loadscene.h">
+      <Filter>src\Scenes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
