--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,15 +47,11 @@ if(APPLE OR WINDOWS)
 endif()
 
 # add cross-platforms source files and header files 
-list(APPEND GAME_SOURCE
-     Classes/AppDelegate.cpp
-     Classes/HelloWorldScene.cpp
+file(GLOB_RECURSE GAME_SOURCE
+     "Classes/*.cpp"
+     "Classes/*.c"
+     "Classes/*.h"
      )
-list(APPEND GAME_HEADER
-     Classes/AppDelegate.h
-     Classes/HelloWorldScene.h
-     )
-
 if(ANDROID)
     # change APP_NAME to the share library name for Android, it's value depend on AndroidManifest.xml
     set(APP_NAME MyGame)
